feature: added icon and configuration possibility.

--- a/css/menustyle.css
+++ b/css/menustyle.css
@@ -36,7 +36,7 @@ p {
   padding: 0;
 }
 .background {
-    background-image: url("wrap_bg.webp");
+    background-image: url("../images/background.webp");
     background-repeat: no-repeat;
     background-size: cover;
     height: 90vh;
